# ML

./: README.md  pyproject.toml
image-classification-system/: notebook.ipynb
iris-flower/: notebook.ipynb
own-linear-regression/: notebook.ipynb  pytorch_notebook.ipynb
